desenv_tests/test-assets/field/failure/nested_wrong_usage_2.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(nested(value = true))]
    field: String
}

fn main(){}